Update VSCode settings and enhance HTML structure for Plans and Profile pages

--- a/courses.html
+++ b/courses.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Courses</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@200..1000&display=swap" rel="stylesheet">
@@ -71,6 +71,185 @@
                     <div class="nav">
                         <i class="fa fa-bell"></i>
                         <img src="images/avatar.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="main-section">
+                <div class="container">
+                    <h1 class="main-header">Courses</h1>
+                    <div class="content-courses">
+                        <div class="courses">
+                            <div class="box">
+                                <img src="images/course-01.jpg" alt="" class="course-image">
+                                <img src="images/team-01.png" alt="" class="teacher">
+                                <div class="info">
+                                    <h4>Mastering Web Design</h4>
+                                    <p>
+                                        Master The Art Of Web Designing And Mocking, Prototyping And Creating Web Design Architecture
+                                    </p>
+                                    <div class="box-bottom">
+                                        <span>
+                                            <i class="fa fa-user-alt"></i>
+                                            950
+                                        </span>
+                                        <span>$ 165</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <img src="images/course-02.jpg" alt="" class="course-image">
+                                <img src="images/team-01.png" alt="" class="teacher">
+                                <div class="info">
+                                    <h4>Mastering Web Design</h4>
+                                    <p>
+                                        Master The Art Of Web Designing And Mocking, Prototyping And Creating Web Design Architecture
+                                    </p>
+                                    <div class="box-bottom">
+                                        <span>
+                                            <i class="fa fa-user-alt"></i>
+                                            950
+                                        </span>
+                                        <span>$ 165</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <img src="images/course-04.jpg" alt="" class="course-image">
+                                <img src="images/team-04.png" alt="" class="teacher">
+                                <div class="info">
+                                    <h4>Mastering Web Design</h4>
+                                    <p>
+                                        Master The Art Of Web Designing And Mocking, Prototyping And Creating Web Design Architecture
+                                    </p>
+                                    <div class="box-bottom">
+                                        <span>
+                                            <i class="fa fa-user-alt"></i>
+                                            950
+                                        </span>
+                                        <span>$ 165</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <img src="images/course-03.jpg" alt="" class="course-image">
+                                <img src="images/team-03.png" alt="" class="teacher">
+                                <div class="info">
+                                    <h4>Mastering Web Design</h4>
+                                    <p>
+                                        Master The Art Of Web Designing And Mocking, Prototyping And Creating Web Design Architecture
+                                    </p>
+                                    <div class="box-bottom">
+                                        <span>
+                                            <i class="fa fa-user-alt"></i>
+                                            950
+                                        </span>
+                                        <span>$ 165</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <img src="images/course-02.jpg" alt="" class="course-image">
+                                <img src="images/team-02.png" alt="" class="teacher">
+                                <div class="info">
+                                    <h4>Mastering Web Design</h4>
+                                    <p>
+                                        Master The Art Of Web Designing And Mocking, Prototyping And Creating Web Design Architecture
+                                    </p>
+                                    <div class="box-bottom">
+                                        <span>
+                                            <i class="fa fa-user-alt"></i>
+                                            950
+                                        </span>
+                                        <span>$ 165</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <img src="images/course-05.jpg" alt="" class="course-image">
+                                <img src="images/team-05.png" alt="" class="teacher">
+                                <div class="info">
+                                    <h4>Mastering Web Design</h4>
+                                    <p>
+                                        Master The Art Of Web Designing And Mocking, Prototyping And Creating Web Design Architecture
+                                    </p>
+                                    <div class="box-bottom">
+                                        <span>
+                                            <i class="fa fa-user-alt"></i>
+                                            950
+                                        </span>
+                                        <span>$ 165</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <img src="images/course-04.jpg" alt="" class="course-image">
+                                <img src="images/team-04.png" alt="" class="teacher">
+                                <div class="info">
+                                    <h4>Mastering Web Design</h4>
+                                    <p>
+                                        Master The Art Of Web Designing And Mocking, Prototyping And Creating Web Design Architecture
+                                    </p>
+                                    <div class="box-bottom">
+                                        <span>
+                                            <i class="fa fa-user-alt"></i>
+                                            950
+                                        </span>
+                                        <span>$ 165</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <img src="images/course-03.jpg" alt="" class="course-image">
+                                <img src="images/team-03.png" alt="" class="teacher">
+                                <div class="info">
+                                    <h4>Mastering Web Design</h4>
+                                    <p>
+                                        Master The Art Of Web Designing And Mocking, Prototyping And Creating Web Design Architecture
+                                    </p>
+                                    <div class="box-bottom">
+                                        <span>
+                                            <i class="fa fa-user-alt"></i>
+                                            950
+                                        </span>
+                                        <span>$ 165</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <img src="images/course-02.jpg" alt="" class="course-image">
+                                <img src="images/team-02.png" alt="" class="teacher">
+                                <div class="info">
+                                    <h4>Mastering Web Design</h4>
+                                    <p>
+                                        Master The Art Of Web Designing And Mocking, Prototyping And Creating Web Design Architecture
+                                    </p>
+                                    <div class="box-bottom">
+                                        <span>
+                                            <i class="fa fa-user-alt"></i>
+                                            950
+                                        </span>
+                                        <span>$ 165</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <img src="images/course-01.jpg" alt="" class="course-image">
+                                <img src="images/team-01.png" alt="" class="teacher">
+                                <div class="info">
+                                    <h4>Mastering Web Design</h4>
+                                    <p>
+                                        Master The Art Of Web Designing And Mocking, Prototyping And Creating Web Design Architecture
+                                    </p>
+                                    <div class="box-bottom">
+                                        <span>
+                                            <i class="fa fa-user-alt"></i>
+                                            950
+                                        </span>
+                                        <span>$ 165</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
