--- a/files.html
+++ b/files.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Files</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@200..1000&display=swap" rel="stylesheet">
@@ -72,6 +72,312 @@
                     <i class="fa fa-bell"></i>
                     <img src="images/avatar.png" alt="">
                 </div>
+                </div>
+            </div>
+            <div class="main-section">
+                <div class="container">
+                    <h1 class="main-header">files</h1>
+                    <div class="content-files">
+                        <div class="files">
+                            <div class="box">
+                                <i class="fa fa-download"></i>
+                                <img src="images/pdf.svg" alt="">
+                                <span class="file-name">my-file.pdf</span>
+                                <span class="username">Aiham</span>
+                                <div>
+                                    <span class="date">20/06/2020</span>
+                                    <span class="size">5.5MB</span>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <i class="fa fa-download"></i>
+                                <img src="images/pdf.svg" alt="">
+                                <span class="file-name">my-file.pdf</span>
+                                <span class="username">Aiham</span>
+                                <div>
+                                    <span class="date">20/06/2020</span>
+                                    <span class="size">5.5MB</span>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <i class="fa fa-download"></i>
+                                <img src="images/pdf.svg" alt="">
+                                <span class="file-name">my-file.pdf</span>
+                                <span class="username">Aiham</span>
+                                <div>
+                                    <span class="date">20/06/2020</span>
+                                    <span class="size">5.5MB</span>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <i class="fa fa-download"></i>
+                                <img src="images/pdf.svg" alt="">
+                                <span class="file-name">my-file.pdf</span>
+                                <span class="username">Aiham</span>
+                                <div>
+                                    <span class="date">20/06/2020</span>
+                                    <span class="size">5.5MB</span>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <i class="fa fa-download"></i>
+                                <img src="images/pdf.svg" alt="">
+                                <span class="file-name">my-file.pdf</span>
+                                <span class="username">Aiham</span>
+                                <div>
+                                    <span class="date">20/06/2020</span>
+                                    <span class="size">5.5MB</span>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <i class="fa fa-download"></i>
+                                <img src="images/pdf.svg" alt="">
+                                <span class="file-name">my-file.pdf</span>
+                                <span class="username">Aiham</span>
+                                <div>
+                                    <span class="date">20/06/2020</span>
+                                    <span class="size">5.5MB</span>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <i class="fa fa-download"></i>
+                                <img src="images/pdf.svg" alt="">
+                                <span class="file-name">my-file.pdf</span>
+                                <span class="username">Aiham</span>
+                                <div>
+                                    <span class="date">20/06/2020</span>
+                                    <span class="size">5.5MB</span>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <i class="fa fa-download"></i>
+                                <img src="images/pdf.svg" alt="">
+                                <span class="file-name">my-file.pdf</span>
+                                <span class="username">Aiham</span>
+                                <div>
+                                    <span class="date">20/06/2020</span>
+                                    <span class="size">5.5MB</span>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <i class="fa fa-download"></i>
+                                <img src="images/pdf.svg" alt="">
+                                <span class="file-name">my-file.pdf</span>
+                                <span class="username">Aiham</span>
+                                <div>
+                                    <span class="date">20/06/2020</span>
+                                    <span class="size">5.5MB</span>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <i class="fa fa-download"></i>
+                                <img src="images/pdf.svg" alt="">
+                                <span class="file-name">my-file.pdf</span>
+                                <span class="username">Aiham</span>
+                                <div>
+                                    <span class="date">20/06/2020</span>
+                                    <span class="size">5.5MB</span>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <i class="fa fa-download"></i>
+                                <img src="images/pdf.svg" alt="">
+                                <span class="file-name">my-file.pdf</span>
+                                <span class="username">Aiham</span>
+                                <div>
+                                    <span class="date">20/06/2020</span>
+                                    <span class="size">5.5MB</span>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <i class="fa fa-download"></i>
+                                <img src="images/pdf.svg" alt="">
+                                <span class="file-name">my-file.pdf</span>
+                                <span class="username">Aiham</span>
+                                <div>
+                                    <span class="date">20/06/2020</span>
+                                    <span class="size">5.5MB</span>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <i class="fa fa-download"></i>
+                                <img src="images/pdf.svg" alt="">
+                                <span class="file-name">my-file.pdf</span>
+                                <span class="username">Aiham</span>
+                                <div>
+                                    <span class="date">20/06/2020</span>
+                                    <span class="size">5.5MB</span>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <i class="fa fa-download"></i>
+                                <img src="images/pdf.svg" alt="">
+                                <span class="file-name">my-file.pdf</span>
+                                <span class="username">Aiham</span>
+                                <div>
+                                    <span class="date">20/06/2020</span>
+                                    <span class="size">5.5MB</span>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <i class="fa fa-download"></i>
+                                <img src="images/pdf.svg" alt="">
+                                <span class="file-name">my-file.pdf</span>
+                                <span class="username">Aiham</span>
+                                <div>
+                                    <span class="date">20/06/2020</span>
+                                    <span class="size">5.5MB</span>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <i class="fa fa-download"></i>
+                                <img src="images/pdf.svg" alt="">
+                                <span class="file-name">my-file.pdf</span>
+                                <span class="username">Aiham</span>
+                                <div>
+                                    <span class="date">20/06/2020</span>
+                                    <span class="size">5.5MB</span>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <i class="fa fa-download"></i>
+                                <img src="images/pdf.svg" alt="">
+                                <span class="file-name">my-file.pdf</span>
+                                <span class="username">Aiham</span>
+                                <div>
+                                    <span class="date">20/06/2020</span>
+                                    <span class="size">5.5MB</span>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <i class="fa fa-download"></i>
+                                <img src="images/pdf.svg" alt="">
+                                <span class="file-name">my-file.pdf</span>
+                                <span class="username">Aiham</span>
+                                <div>
+                                    <span class="date">20/06/2020</span>
+                                    <span class="size">5.5MB</span>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <i class="fa fa-download"></i>
+                                <img src="images/pdf.svg" alt="">
+                                <span class="file-name">my-file.pdf</span>
+                                <span class="username">Aiham</span>
+                                <div>
+                                    <span class="date">20/06/2020</span>
+                                    <span class="size">5.5MB</span>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <i class="fa fa-download"></i>
+                                <img src="images/pdf.svg" alt="">
+                                <span class="file-name">my-file.pdf</span>
+                                <span class="username">Aiham</span>
+                                <div>
+                                    <span class="date">20/06/2020</span>
+                                    <span class="size">5.5MB</span>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <i class="fa fa-download"></i>
+                                <img src="images/pdf.svg" alt="">
+                                <span class="file-name">my-file.pdf</span>
+                                <span class="username">Aiham</span>
+                                <div>
+                                    <span class="date">20/06/2020</span>
+                                    <span class="size">5.5MB</span>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <i class="fa fa-download"></i>
+                                <img src="images/pdf.svg" alt="">
+                                <span class="file-name">my-file.pdf</span>
+                                <span class="username">Aiham</span>
+                                <div>
+                                    <span class="date">20/06/2020</span>
+                                    <span class="size">5.5MB</span>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <i class="fa fa-download"></i>
+                                <img src="images/pdf.svg" alt="">
+                                <span class="file-name">my-file.pdf</span>
+                                <span class="username">Aiham</span>
+                                <div>
+                                    <span class="date">20/06/2020</span>
+                                    <span class="size">5.5MB</span>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <i class="fa fa-download"></i>
+                                <img src="images/pdf.svg" alt="">
+                                <span class="file-name">my-file.pdf</span>
+                                <span class="username">Aiham</span>
+                                <div>
+                                    <span class="date">20/06/2020</span>
+                                    <span class="size">5.5MB</span>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <i class="fa fa-download"></i>
+                                <img src="images/pdf.svg" alt="">
+                                <span class="file-name">my-file.pdf</span>
+                                <span class="username">Aiham</span>
+                                <div>
+                                    <span class="date">20/06/2020</span>
+                                    <span class="size">5.5MB</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="statistics">
+                            <h2>FIles Statistics</h2>
+                            <div class="box">
+                                <i class="fa fa-file-csv"></i>
+                                <div class="info">
+                                    <div class="inner-box">
+                                        <h4>PDF Files</h4>
+                                        <span class="count">130</span>
+                                    </div>
+                                    <span class="size">6.5GB</span>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <i class="fa fa-file-word"></i>
+                                <div class="info">
+                                    <div class="inner-box">
+                                        <h4>PDF Files</h4>
+                                        <span class="count">130</span>
+                                    </div>
+                                    <span class="size">6.5GB</span>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <i class="fa fa-file-image"></i>
+                                <div class="info">
+                                    <div class="inner-box">
+                                        <h4>PDF Files</h4>
+                                        <span class="count">100</span>
+                                    </div>
+                                    <span class="size">36.5GB</span>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <i class="fa fa-file-pdf"></i>
+                                <div class="info">
+                                    <div class="inner-box">
+                                        <h4>PDF Files</h4>
+                                        <span class="count">130</span>
+                                    </div>
+                                    <span class="size">6.5GB</span>
+                                </div>
+                            </div>
+                            <a href="#">
+                                <i class="fa fa-angle-double-up"></i>
+                                Upload
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
