--- a/profile.html
+++ b/profile.html
@@ -2,17 +2,16 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@200..1000&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="/css/framework.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/all.min.css">
-
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Profile</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@200..1000&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="/css/framework.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/all.min.css" />
 </head>
 
 <body>
@@ -66,12 +65,106 @@
             <div class="header">
                 <div class="container">
                     <label for="search">
-                        <input type="search" placeholder="search" name="search" id="search">
+                        <input type="search" placeholder="search" name="search" id="search" />
                     </label>
-                <div class="nav">
-                    <i class="fa fa-bell"></i>
-                    <img src="images/avatar.png" alt="">
+                    <div class="nav">
+                        <i class="fa fa-bell"></i>
+                        <img src="images/avatar.png" alt="" />
+                    </div>
                 </div>
+            </div>
+            <div class="main-section">
+                <div class="container">
+                    <h1 class="main-header">Profile</h1>
+                    <div class="content">
+                        <div class="main-content">
+                            <div class="info">
+                                <img src="images/avatar.png" alt="">
+                                <h4>Aiham Jassar</h4>
+                                <span class="level">Level 20</span>
+                                <div class="progress">
+                                    <span style="width: 70%;"></span>
+                                </div>
+                                <div class="stars">
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                </div>
+                                <span class="rating">550 Rating</span>
+                            </div>
+                            <div class="boxes">
+                                <div class="box">
+                                    <div class="general-info">
+                                        <p>General Information</p>
+                                        <p>Full Name: <span>Aiham Mohammed</span></p>
+                                        <p>Gender: <span>Male</span></p>
+                                        <p>Country: <span>Yemen</span></p>
+                                        <p><span class="toggle-button"></span></p>
+                                    </div>
+                                </div>
+                                <div class="personal-info"></div>
+                                <div class="job-info"></div>
+                                <div class="billing-info"></div>
+                            </div>
+                        </div>
+                        <div class="my-skills">
+                            <div class="secondary-header">
+                                <h2>My Skills</h2>
+                                <p>Complete Skills List</p>
+                            </div>
+                            <div class="box">
+                                <span>HTML</span>
+                                <span>Pugjs</span>
+                                <span>HAML</span>
+                            </div>
+                            <div class="box">
+                                <span>CSS</span>
+                                <span>SASS</span>
+                                <span>stylus</span>
+                            </div>
+                            <div class="box">
+                                <span>JavaScript</span>
+                                <span>TypeScript</span>
+                            </div>
+                            <div class="box">
+                                <span>Vuejs</span>
+                                <span>Reactjs</span>
+                            </div>
+                            <div class="box">
+                                <span>Jest</span>
+                                <span>Jasmine</span>
+                            </div>
+                            <div class="box">
+                                <span>PHP</span>
+                                <span>Laravel</span>
+                            </div>
+                            <div class="box">
+                                <span>Python</span>
+                                <span>Django</span>
+                            </div>
+                        </div>
+                        <div class="latest-activities">
+                            <div class="secondary-header">
+                                <h2>Latest Activities</h2>
+                                <p>Latest Activities Done By The User</p>
+                            </div>
+                            <div class="box">
+                                <img src="images/activity-01.png" alt="">
+                                <div class="info">
+                                    <div class="inner-box-right">
+                                        <span>Store</span>
+                                        <p>Bought The Mastering Python Course</p>
+                                    </div>
+                                    
+                                        <span>18:10</span>
+                                        <span>Yesterday</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
