--- a/friends.html
+++ b/friends.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Friends</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@200..1000&display=swap" rel="stylesheet">
@@ -46,7 +46,7 @@
                         <span>Courses</span></a>
                 </li>
                 <li>
-                    <a href="friends.html"  class="active">
+                    <a href="friends.html" class="active">
                         <i class="fa fa-user-circle"></i>
                         <span>Friends</span></a>
                 </li>
@@ -68,10 +68,319 @@
                     <label for="search">
                         <input type="search" placeholder="search" name="search" id="search">
                     </label>
-                <div class="nav">
-                    <i class="fa fa-bell"></i>
-                    <img src="images/avatar.png" alt="">
+                    <div class="nav">
+                        <i class="fa fa-bell"></i>
+                        <img src="images/avatar.png" alt="">
+                    </div>
                 </div>
+            </div>
+            <div class="main-section">
+                <div class="container">
+                    <h1 class="main-header">Friends</h1>
+                    <div class="content-friends">
+                        <div class="friends">
+                            <div class="box">
+                                <div class="icons">
+                                    <i class="fas fa-phone"></i>
+                                    <i class="far fa-envelope"></i>
+                                </div>
+                                <img src="images/friend-01.jpg" alt="">
+                                <span class="name">Aiham Jassar</span>
+                                <span class="job">Full-Stack Developer</span>
+                                <div class="info">
+                                    <div>
+                                        <i class="fa fa-user-friends"></i>
+                                        <span>99 Friend</span>
+                                    </div>
+                                    <div>
+                                        <i class="fa fa-project-diagram"></i>
+                                        <span>15 Projects</span>
+                                    </div>
+                                    <div>
+                                        <i class="fas fa-archway"></i>
+                                        <span>25 Articles</span>
+                                    </div>
+                                </div>
+                                <div class="box-bottom">
+                                    <span class="date">Joined 02/10/2021</span>
+                                    <div>
+                                        <a href="#">Profile</a>
+                                        <a href="#">Remove</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <div class="icons">
+                                    <i class="fas fa-phone"></i>
+                                    <i class="far fa-envelope"></i>
+                                </div>
+                                <img src="images/friend-01.jpg" alt="">
+                                <span class="name">Aiham Jassar</span>
+                                <span class="job">Full-Stack Developer</span>
+                                <div class="info">
+                                    <div>
+                                        <i class="fa fa-user-friends"></i>
+                                        <span>99 Friend</span>
+                                    </div>
+                                    <div>
+                                        <i class="fa fa-project-diagram"></i>
+                                        <span>15 Projects</span>
+                                    </div>
+                                    <div>
+                                        <i class="fas fa-archway"></i>
+                                        <span>25 Articles</span>
+                                    </div>
+                                </div>
+                                <div class="box-bottom">
+                                    <span class="date">Joined 02/10/2021</span>
+                                    <div>
+                                        <a href="#">Profile</a>
+                                        <a href="#">Remove</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <div class="icons">
+                                    <i class="fas fa-phone"></i>
+                                    <i class="far fa-envelope"></i>
+                                </div>
+                                <img src="images/friend-01.jpg" alt="">
+                                <span class="name">Aiham Jassar</span>
+                                <span class="job">Full-Stack Developer</span>
+                                <div class="info">
+                                    <div>
+                                        <i class="fa fa-user-friends"></i>
+                                        <span>99 Friend</span>
+                                    </div>
+                                    <div>
+                                        <i class="fa fa-project-diagram"></i>
+                                        <span>15 Projects</span>
+                                    </div>
+                                    <div>
+                                        <i class="fas fa-archway"></i>
+                                        <span>25 Articles</span>
+                                    </div>
+                                </div>
+                                <div class="box-bottom">
+                                    <span class="date">Joined 02/10/2021</span>
+                                    <div>
+                                        <a href="#">Profile</a>
+                                        <a href="#">Remove</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <div class="icons">
+                                    <i class="fas fa-phone"></i>
+                                    <i class="far fa-envelope"></i>
+                                </div>
+                                <img src="images/friend-01.jpg" alt="">
+                                <span class="name">Aiham Jassar</span>
+                                <span class="job">Full-Stack Developer</span>
+                                <div class="info">
+                                    <div>
+                                        <i class="fa fa-user-friends"></i>
+                                        <span>99 Friend</span>
+                                    </div>
+                                    <div>
+                                        <i class="fa fa-project-diagram"></i>
+                                        <span>15 Projects</span>
+                                    </div>
+                                    <div>
+                                        <i class="fas fa-archway"></i>
+                                        <span>25 Articles</span>
+                                    </div>
+                                </div>
+                                <div class="box-bottom">
+                                    <span class="date">Joined 02/10/2021</span>
+                                    <div>
+                                        <a href="#">Profile</a>
+                                        <a href="#">Remove</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <div class="icons">
+                                    <i class="fas fa-phone"></i>
+                                    <i class="far fa-envelope"></i>
+                                </div>
+                                <img src="images/friend-01.jpg" alt="">
+                                <span class="name">Aiham Jassar</span>
+                                <span class="job">Full-Stack Developer</span>
+                                <div class="info">
+                                    <div>
+                                        <i class="fa fa-user-friends"></i>
+                                        <span>99 Friend</span>
+                                    </div>
+                                    <div>
+                                        <i class="fa fa-project-diagram"></i>
+                                        <span>15 Projects</span>
+                                    </div>
+                                    <div>
+                                        <i class="fas fa-archway"></i>
+                                        <span>25 Articles</span>
+                                    </div>
+                                </div>
+                                <div class="box-bottom">
+                                    <span class="date">Joined 02/10/2021</span>
+                                    <div>
+                                        <a href="#">Profile</a>
+                                        <a href="#">Remove</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <div class="icons">
+                                    <i class="fas fa-phone"></i>
+                                    <i class="far fa-envelope"></i>
+                                </div>
+                                <img src="images/friend-01.jpg" alt="">
+                                <span class="name">Aiham Jassar</span>
+                                <span class="job">Full-Stack Developer</span>
+                                <div class="info">
+                                    <div>
+                                        <i class="fa fa-user-friends"></i>
+                                        <span>99 Friend</span>
+                                    </div>
+                                    <div>
+                                        <i class="fa fa-project-diagram"></i>
+                                        <span>15 Projects</span>
+                                    </div>
+                                    <div>
+                                        <i class="fas fa-archway"></i>
+                                        <span>25 Articles</span>
+                                    </div>
+                                </div>
+                                <div class="box-bottom">
+                                    <span class="date">Joined 02/10/2021</span>
+                                    <div>
+                                        <a href="#">Profile</a>
+                                        <a href="#">Remove</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <div class="icons">
+                                    <i class="fas fa-phone"></i>
+                                    <i class="far fa-envelope"></i>
+                                </div>
+                                <img src="images/friend-01.jpg" alt="">
+                                <span class="name">Aiham Jassar</span>
+                                <span class="job">Full-Stack Developer</span>
+                                <div class="info">
+                                    <div>
+                                        <i class="fa fa-user-friends"></i>
+                                        <span>99 Friend</span>
+                                    </div>
+                                    <div>
+                                        <i class="fa fa-project-diagram"></i>
+                                        <span>15 Projects</span>
+                                    </div>
+                                    <div>
+                                        <i class="fas fa-archway"></i>
+                                        <span>25 Articles</span>
+                                    </div>
+                                </div>
+                                <div class="box-bottom">
+                                    <span class="date">Joined 02/10/2021</span>
+                                    <div>
+                                        <a href="#">Profile</a>
+                                        <a href="#">Remove</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <div class="icons">
+                                    <i class="fas fa-phone"></i>
+                                    <i class="far fa-envelope"></i>
+                                </div>
+                                <img src="images/friend-01.jpg" alt="">
+                                <span class="name">Aiham Jassar</span>
+                                <span class="job">Full-Stack Developer</span>
+                                <div class="info">
+                                    <div>
+                                        <i class="fa fa-user-friends"></i>
+                                        <span>99 Friend</span>
+                                    </div>
+                                    <div>
+                                        <i class="fa fa-project-diagram"></i>
+                                        <span>15 Projects</span>
+                                    </div>
+                                    <div>
+                                        <i class="fas fa-archway"></i>
+                                        <span>25 Articles</span>
+                                    </div>
+                                </div>
+                                <div class="box-bottom">
+                                    <span class="date">Joined 02/10/2021</span>
+                                    <div>
+                                        <a href="#">Profile</a>
+                                        <a href="#">Remove</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <div class="icons">
+                                    <i class="fas fa-phone"></i>
+                                    <i class="far fa-envelope"></i>
+                                </div>
+                                <img src="images/friend-01.jpg" alt="">
+                                <span class="name">Aiham Jassar</span>
+                                <span class="job">Full-Stack Developer</span>
+                                <div class="info">
+                                    <div>
+                                        <i class="fa fa-user-friends"></i>
+                                        <span>99 Friend</span>
+                                    </div>
+                                    <div>
+                                        <i class="fa fa-project-diagram"></i>
+                                        <span>15 Projects</span>
+                                    </div>
+                                    <div>
+                                        <i class="fas fa-archway"></i>
+                                        <span>25 Articles</span>
+                                    </div>
+                                </div>
+                                <div class="box-bottom">
+                                    <span class="date">Joined 02/10/2021</span>
+                                    <div>
+                                        <a href="#">Profile</a>
+                                        <a href="#">Remove</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <div class="icons">
+                                    <i class="fas fa-phone"></i>
+                                    <i class="far fa-envelope"></i>
+                                </div>
+                                <img src="images/friend-01.jpg" alt="">
+                                <span class="name">Aiham Jassar</span>
+                                <span class="job">Full-Stack Developer</span>
+                                <div class="info">
+                                    <div>
+                                        <i class="fa fa-user-friends"></i>
+                                        <span>99 Friend</span>
+                                    </div>
+                                    <div>
+                                        <i class="fa fa-project-diagram"></i>
+                                        <span>15 Projects</span>
+                                    </div>
+                                    <div>
+                                        <i class="fas fa-archway"></i>
+                                        <span>25 Articles</span>
+                                    </div>
+                                </div>
+                                <div class="box-bottom">
+                                    <span class="date">Joined 02/10/2021</span>
+                                    <div>
+                                        <a href="#">Profile</a>
+                                        <a href="#">Remove</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
