--- a/plans.html
+++ b/plans.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Plans</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@200..1000&display=swap" rel="stylesheet">
@@ -72,6 +72,12 @@
                     <i class="fa fa-bell"></i>
                     <img src="images/avatar.png" alt="">
                 </div>
+                </div>
+            </div>
+            <div class="main-section">
+                <div class="container">
+                    <h1 class="main-header">Plans</h1>
+                    <div class="content"></div>
                 </div>
             </div>
         </div>
