--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Projects</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@200..1000&display=swap" rel="stylesheet">
@@ -68,10 +68,209 @@
                     <label for="search">
                         <input type="search" placeholder="search" name="search" id="search">
                     </label>
-                <div class="nav">
-                    <i class="fa fa-bell"></i>
-                    <img src="images/avatar.png" alt="">
+                    <div class="nav">
+                        <i class="fa fa-bell"></i>
+                        <img src="images/avatar.png" alt="">
+                    </div>
                 </div>
+            </div>
+            <div class="main-section">
+                <div class="container">
+                    <h1 class="main-header">Projects</h1>
+                    <div class="content">
+                        <div class="project">
+                            <h4>Aiham Dashboard</h4>
+                            <p>Aiham Dashboard Project Design And Programming And Hosting</p>
+                            <span class="date">15/10/2021</span>
+                            <div class="images">
+                                <img src="images/team-01.png" alt="">
+                                <img src="images/team-02.png" alt="">
+                                <img src="images/team-03.png" alt="">
+                                <img src="images/team-04.png" alt="">
+                                <img src="images/team-05.png" alt="">
+                            </div>
+                            <div class="keywords">
+                                <span>Programming</span>
+                                <span>Design</span>
+                                <span>Hosting</span>
+                                <span>Marketing</span>
+                            </div>
+                            <div class="box">
+                                <div class="progress">
+                                    <span style="width: 50%;"></span>
+                                </div>
+                                <span>$ 2500</span>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <h4>Aiham Dashboard</h4>
+                            <p>Aiham Dashboard Project Design And Programming And Hosting</p>
+                            <span class="date">15/10/2021</span>
+                            <div class="images">
+                                <img src="images/team-01.png" alt="">
+                                <img src="images/team-02.png" alt="">
+                                <img src="images/team-03.png" alt="">
+                                <img src="images/team-04.png" alt="">
+                                <img src="images/team-05.png" alt="">
+                            </div>
+                            <div class="keywords">
+                                <span>Programming</span>
+                                <span>Design</span>
+                            </div>
+                            <div class="box">
+                                <div class="progress">
+                                    <span style="width: 50%;"></span>
+                                </div>
+                                <span>$ 2500</span>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <h4>Aiham Dashboard</h4>
+                            <p>Aiham Dashboard Project Design And Programming And Hosting</p>
+                            <span class="date">15/10/2021</span>
+                            <div class="images">
+                                <img src="images/team-01.png" alt="">
+                                <img src="images/team-02.png" alt="">
+                                <img src="images/team-03.png" alt="">
+                            </div>
+                            <div class="keywords">
+                                <span>Programming</span>
+                                <span>Design</span>
+                            </div>
+                            <div class="box">
+                                <div class="progress">
+                                    <span style="width: 50%;"></span>
+                                </div>
+                                <span>$ 1800</span>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <h4>Aiham Dashboard</h4>
+                            <p>Aiham Dashboard Project Design And Programming And Hosting</p>
+                            <span class="date">15/10/2021</span>
+                            <div class="images">
+                                <img src="images/team-01.png" alt="">
+                                <img src="images/team-02.png" alt="">
+                                <img src="images/team-03.png" alt="">
+                            </div>
+                            <div class="keywords">
+                                <span>Design</span>
+                            </div>
+                            <div class="box">
+                                <div class="progress">
+                                    <span style="width: 50%;"></span>
+                                </div>
+                                <span>$ 950</span>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <h4>Aiham Dashboard</h4>
+                            <p>Aiham Dashboard Project Design And Programming And Hosting</p>
+                            <span class="date">15/10/2021</span>
+                            <div class="images">
+                                <img src="images/team-01.png" alt="">
+                                <img src="images/team-02.png" alt="">
+                                <img src="images/team-03.png" alt="">
+                                <img src="images/team-04.png" alt="">
+                            </div>
+                            <div class="keywords">
+                                <span>Programming</span>
+                                <span>Design</span>
+                                <span>Hosting</span>
+                                <span>Marketing</span>
+                            </div>
+                            <div class="box">
+                                <div class="progress">
+                                    <span style="width: 50%;"></span>
+                                </div>
+                                <span>$ 1700</span>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <h4>Aiham Dashboard</h4>
+                            <p>Aiham Dashboard Project Design And Programming And Hosting</p>
+                            <span class="date">15/10/2021</span>
+                            <div class="images">
+                                <img src="images/team-01.png" alt="">
+                                <img src="images/team-02.png" alt="">
+                                <img src="images/team-03.png" alt="">
+                            </div>
+                            <div class="keywords">
+                                <span>Programming</span>
+                                <span>Design</span>
+                            </div>
+                            <div class="box">
+                                <div class="progress">
+                                    <span style="width: 50%;"></span>
+                                </div>
+                                <span>$ 8500</span>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <h4>Aiham Dashboard</h4>
+                            <p>Aiham Dashboard Project Design And Programming And Hosting</p>
+                            <span class="date">15/10/2021</span>
+                            <div class="images">
+                                <img src="images/team-01.png" alt="">
+                                <img src="images/team-02.png" alt="">
+                                <img src="images/team-03.png" alt="">
+                            </div>
+                            <div class="keywords">
+                                <span>Design</span>
+                            </div>
+                            <div class="box">
+                                <div class="progress">
+                                    <span style="width: 50%;"></span>
+                                </div>
+                                <span>$ 7800</span>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <h4>Aiham Dashboard</h4>
+                            <p>Aiham Dashboard Project Design And Programming And Hosting</p>
+                            <span class="date">15/10/2021</span>
+                            <div class="images">
+                                <img src="images/team-01.png" alt="">
+                                <img src="images/team-02.png" alt="">
+                                <img src="images/team-03.png" alt="">
+                                <img src="images/team-04.png" alt="">
+                            </div>
+                            <div class="keywords">
+                                <span>Programming</span>
+                                <span>Design</span>
+                                <span>Hosting</span>
+                                <span>Marketing</span>
+                            </div>
+                            <div class="box">
+                                <div class="progress">
+                                    <span style="width: 50%;"></span>
+                                </div>
+                                <span>$ 2000</span>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <h4>Aiham Dashboard</h4>
+                            <p>Aiham Dashboard Project Design And Programming And Hosting</p>
+                            <span class="date">15/10/2021</span>
+                            <div class="images">
+                                <img src="images/team-01.png" alt="">
+                                <img src="images/team-02.png" alt="">
+                            </div>
+                            <div class="keywords">
+                                <span>Programming</span>
+                                <span>Design</span>
+                                <span>Hosting</span>
+                                <span>Marketing</span>
+                            </div>
+                            <div class="box">
+                                <div class="progress">
+                                    <span style="width: 50%;"></span>
+                                </div>
+                                <span>$ 2900</span>
+                            </div>
+                        </div>
+                        <div class="project"></div>
+                    </div>
                 </div>
             </div>
         </div>
